--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "http-server",
+    "start": "http-server -c 1",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
